# stack-template-demo

./: README.md  stack-template-demo.cabal
src/: Lib.hs
